# OpenBasin

./: .dockerignore  .gitignore  CLAUDE.md  CONTRIBUTING.md  Dockerfile  README.md  config.example.yaml  docker-compose.yml  pyproject.toml  requirements.txt
android/: README.md  settings.gradle.kts
android/app/: build.gradle.kts  proguard-rules.pro
android/app/src/main/: AndroidManifest.xml
android/app/src/main/res/layout/: activity_main.xml
android/app/src/main/res/values/: strings.xml
android/gradle/wrapper/: gradle-wrapper.properties
pipelines/: credit-card.yaml
pipelines/dev/: archive-email.yaml  archive-notification.yaml  archive-sms.yaml
pipelines/examples/: invoice-archive.yaml  news-digest.yaml  parcel-tracking.yaml  subscription-alert.yaml
scripts/: README.md  send_test_event.py
server/: __init__.py  __main__.py  cli.py  config.py  models.py
server/actions/: __init__.py  base.py  file.py  firefly.py  notion.py  sheet.py  telegram.py  webhook.py
server/api/: __init__.py  app.py  schemas.py
server/db/: __init__.py  store.py
server/extract/: __init__.py  extractor.py  llm_client.py  prompts.py
server/extract/prompts/: bank_sms.yaml  parcel.yaml
server/pipeline/: __init__.py  conditions.py  engine.py  loader.py  models.py
server/sources/: __init__.py  base.py  email.py  notification.py  sms.py
server/transport/: __init__.py  crypto.py
tests/: test_actions.py  test_api_e2e.py  test_conditions.py  test_db_dedup.py  test_extractor.py  test_pipeline_matching.py  test_transport_crypto.py
(+9 files in other folders)
